# rag-playground

./: .editorconfig  .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
data/input/kaggle_competitions/fp1/: sample_submission.csv  train.csv
notebooks/basics/: embedding_and_indexing_documents.ipynb
secrets/: openai_api_key.json.sample
src/: helper_functions.py
tests/: test_helper_functions.py
